--- a/Tyuiu.LavrinovichED.Sprint7.Project.V11/FormHelp.resx
+++ b/Tyuiu.LavrinovichED.Sprint7.Project.V11/FormHelp.resx
@@ -118,16 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="textBoxHelp_LED.Text" xml:space="preserve">
-    <value>1. Для начала работы создайте файл, нажав на кнопку "Создать файл" или откройте уже существуюзий файл нажав "Открыть файл". Выглядит как файл.
+    <value>1. Для начала работы откройте уже существующий файл нажав "Открыть файл" или создайте свою таблицу (пункт 2). 
     
-2. Для добавления данных в таблицу нужно ввести данные в верхней части экрана и нажать кнопку "Добавить". В случае удаления строки из таблицы, выделить строку и нажа ть кнопку"Удалить".
+2. Для добавления данных в таблицу нужно ввести данные в верхней части экрана и нажать кнопку "+". В случае удаления строки из таблицы, выделить строку и нажа ть кнопку"х".
    
-3. Для выведения диаграммы заработной платы по месяцам нажать кнопку "График", которая находится рядом со словом таблица и нажать "Выполнить".
+3. Для выведения диаграммы заработной платы по месяцам нажать кнопку "График", которая находится рядом с таблицей и нажать на кнопку с изображением галочки.
     
-4. Для того, чтобы произвести фильтрацию необходимо выбрать нужную категорию фильтрации или вписать самостоятельно.
+4. Для того, чтобы произвести фильтрацию необходимо выбрать по какому критерию хотели бы найти нужное, нажать поиск.
     
-5. Чтобы найти нужные данные можно воспользоваться функцией "Найти". Выглядит как лупа.
-   
-6. Для выхода из программы можете нажать красный крестик в левом верхнем углу.</value>
+5. Чтобы посчитать сколько всего работников, нажмите кнопку "Посчитать"
+
+6. Для выхода из программы нажмите на дверцу в левом верхнем углу.</value>
   </data>
 </root>
